# WlzIIPSrv

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  build.sh  configure.ac  configure.in  wlziipsrv.env  wlziipsrv.service
doc/manual/: Makefile  architecture.eps  biblio.bib  coordinates.eps  proxyarchit.eps  wlziipsrv.tex
fcgi/: Makefile.am  Makefile.in  Makefile.nt  README
fcgi/doc/: FCGI_Accept.3  FCGI_Finish.3  FCGI_SetExitStatus.3  FCGI_StartFilterData.3  cgi-fcgi.1  fcgi-devel-kit.htm  fcgi-java.htm  fcgi-perf.htm  fcgi-perl.htm  fcgi-spec.html  fcgi-tcl.htm  overview.html
fcgi/doc/fastcgi-whitepaper/: fastcgi.htm
fcgi/include/: Makefile.in
fcgi/java/: FCGIGlobalDefs.java  FCGIInputStream.java  FCGIInterface.java  FCGIMessage.java  FCGIOutputStream.java  FCGIRequest.java
fcgi/libfcgi/: Makefile.am  Makefile.in  fcgiapp.c  os_win32.c
fcgi/perl/: FCGI.PL  FCGI.XL  Makefile.PL  README  aclocal.m4  configure.in  echo.PL
src/: CVT.cc  Cache.h  ColourTransforms.cc  ColourTransforms.h  DSOImage.cc  DSOImage.h  Doxyfile  Environment.h  FIF.cc  ICC.cc  IIPImage.cc  IIPImage.h  IIPResponse.cc  IIPResponse.h  ImageMap.cc  JPEGCompressor.cc  JPEGCompressor.h  JTL.cc  Log.h  MAP.cc  Main.cc  Main.dox  Makefile.am  OBJ.cc  PNGCompressor.cc  PNGCompressor.h  PTL.cc  RawTile.h  SEL.cc  TIL.cc  TPTImage.cc  TPTImage.h  Task.cc  Task.h  TileManager.cc  TileManager.h  Timer.h  Tokenizer.h  View.cc  View.h  (+25 more)
testing/: INSTALL  testing.tgz
