dnl     $Id$
dnl
dnl     This file is an input file used by the GNU "autoconf" program to
dnl     generate the file "configure", which is run during the build
dnl     to configure the system for the local environment.

AC_INIT

AM_CONFIG_HEADER([fcgi_config.h])

AC_PROG_CC
AC_PROG_CPP 

FCGI_COMMON_CHECKS

AC_OUTPUT
